[gd_scene load_steps=5 format=3 uid="uid://bop543qsrcf8s"]

[ext_resource type="Script" path="res://scenes/characters/trash.gd" id="1_fx1my"]
[ext_resource type="Texture2D" uid="uid://c5kojjq30a6fo" path="res://resources/characters/trash.png" id="2_nl3cr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5qea"]
size = Vector2(94, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3aogl"]
size = Vector2(100, 145)

[node name="Trash" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
collision_layer = 4
script = ExtResource("1_fx1my")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 10.5)
shape = SubResource("RectangleShape2D_w5qea")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nl3cr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 9.99999)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_3aogl")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
